<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7f000000"
    android:clickable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ads0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/disable_ads"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/disable_ads_des" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/positive_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:layout_marginStart="2dp"
                android:padding="20dp"
                android:shadowColor="#4A000000"
                android:shadowDx="-2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/yes" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/negative_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:background="@drawable/button"
                android:padding="20dp"
                android:shadowColor="#4A000000"
                android:shadowDx="-2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/no" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/dont" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>