<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView

        android:id="@+id/s_m_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5"
        android:text="@string/one_month"
        android:textAlignment="center"
        android:textColor="@color/sub_text"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sub_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/sub_button_large"
        android:orientation="horizontal"
        android:padding="@dimen/padding_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_m_text">

        <TextView

            android:id="@+id/crossed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price9"
            android:textAlignment="center"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/text_size_25" />

        <TextView

            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price3"
            android:textAlignment="center"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/text_size_25"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>